apps/production/maps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maps
  labels:
    app.kubernetes.io/name: maps
    app.kubernetes.io/component: telemetry
