apps/production/maps/maps-sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maps-sidekiq
  namespace: maps
  labels:
    app: maps-sidekiq
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: maps-sidekiq
  template:
    metadata:
      labels:
        app: maps-sidekiq
    spec:
      containers:
        - name: sidekiq
          image: docker.io/freikin/dawarich:1.15.3 # {"$imagepolicy": "flux-system:maps-app"}
          imagePullPolicy: IfNotPresent
          command: ["sidekiq-entrypoint.sh"]
          args: ["sidekiq"]
          volumeMounts:
            - name: app-data
              mountPath: /var/app/public
              subPath: public
            - name: app-data
              mountPath: /var/app/tmp/imports/watched
              subPath: watched
            - name: app-data
              mountPath: /var/app/storage
              subPath: storage
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "8Gi"
          livenessProbe:
            exec:
              command: ["pgrep", "-f", "sidekiq"]
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: maps-app-data-pvc
      restartPolicy: Always
