apps/production/maps/maps-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maps-app
  namespace: maps
  labels:
    app: maps-app
spec:
  type: ClusterIP
  selector:
    app: maps-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
