apps/production/maps/maps-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maps-db
  namespace: maps
  labels:
    app: maps-db
spec:
  type: ClusterIP
  selector:
    app: maps-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
