apps/production/maps/maps-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maps-redis
  namespace: maps
  labels:
    app: maps-redis
spec:
  type: ClusterIP
  selector:
    app: maps-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
