apps/production/maps/maps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maps-app
  namespace: maps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: maps-maps-forwarded-proto@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - maps.nerdsbythehour.com
      secretName: maps-tls
  rules:
    - host: maps.nerdsbythehour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maps-app
                port:
                  number: 3000
